--- a/app/src/main/res/layout/fragment_server_selection.xml
+++ b/app/src/main/res/layout/fragment_server_selection.xml
@@ -39,9 +39,19 @@
                 app:layout_constraintTop_toBottomOf="@id/drag_handle" />
 
             <ImageView
+                android:id="@+id/visibility_icon"
+                android:layout_width="@dimen/dp_36"
+                android:layout_height="@dimen/dp_36"
+                android:layout_marginEnd="@dimen/dp_16"
+                android:src="@drawable/ic_invisible"
+                app:layout_constraintBottom_toBottomOf="@id/title_label"
+                app:layout_constraintEnd_toStartOf="@id/filter_icon"
+                app:layout_constraintTop_toTopOf="@id/title_label"
+                app:tint="@color/white" />
+            <ImageView
                 android:id="@+id/filter_icon"
-                android:layout_width="@dimen/control_container_size"
-                android:layout_height="@dimen/control_container_size"
+                android:layout_width="@dimen/dp_36"
+                android:layout_height="@dimen/dp_36"
                 android:src="@drawable/ic_filter"
                 app:layout_constraintBottom_toBottomOf="@id/title_label"
                 app:layout_constraintEnd_toStartOf="@id/vg96"
@@ -55,7 +65,7 @@
                 app:layout_constraintTop_toBottomOf="@id/title_label"
                 app:layout_constraintStart_toEndOf="@id/vg04"
                 app:layout_constraintEnd_toStartOf="@id/vg96"
-                tools:listitem="@layout/info_card_layout"
+                tools:listitem="@layout/add_server_card_layout"
                 android:id="@+id/servers_rv"/>
 
             <androidx.constraintlayout.widget.Guideline
