--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,9 @@
     <color name="discord_default">#7289DA</color>
     <color name="discord_default_alpha">#807289DA</color>
     <color name="card_background">#A6323237</color>
+    <color name="check_red">#C20A23</color>
+    <color name="check_yellow">#E5A733</color>
+    <color name="check_green">#33E5A7</color>
     <color name="active_color">#e53371</color>
     <color name="white_stroke">#EDF2F4</color>
 </resources>
