--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,6 @@
     <dimen name="text_medium">16sp</dimen>
     <dimen name="dp_4">4dp</dimen>
     <dimen name="dp_6">6dp</dimen>
+    <dimen name="text_tiny">10sp</dimen>
+    <dimen name="dp_36">36dp</dimen>
 </resources>
