--- a/app/src/main/res/layout/add_server_card_layout.xml
+++ b/app/src/main/res/layout/add_server_card_layout.xml
@@ -51,16 +51,20 @@
                     style="@style/myFontStyle.Regular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:ellipsize="marquee"
+                    android:maxEms="12"
+                    android:maxLines="1"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center_vertical"
                     android:layout_toEndOf="@id/card_container"
-                    android:text="server name"
+                    android:text="Server name"
                     android:textColor="@color/white_stroke"
                     android:textSize="@dimen/text_medium"
                     android:textStyle="bold" />
 
                 <ImageView
                     android:layout_width="@dimen/control_icon_size"
+                    android:id="@+id/icon"
                     android:layout_height="@dimen/control_icon_size"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
