--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,15 @@
     android:background="@drawable/main_background_gradient"
     tools:context=".MainActivity">
 
+    <View
+        android:id="@+id/darken_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:elevation="20dp"
+        android:alpha="0"
+        android:background="@color/transparent_dark"/>
+
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
