--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,7 @@
     <dimen name="dp_8">8dp</dimen>
     <dimen name="dp_16">16dp</dimen>
     <dimen name="text_size_18_sp">18sp</dimen>
+    <dimen name="text_size_14_sp">14sp</dimen>
     <dimen name="control_image_size">36dp</dimen>
     <dimen name="control_container_size">48dp</dimen>
     <dimen name="control_icon_size">24dp</dimen>
@@ -19,6 +20,7 @@
     <dimen name="dp_4">4dp</dimen>
     <dimen name="dp_6">6dp</dimen>
     <dimen name="text_tiny">10sp</dimen>
+    <dimen name="text_very_tiny">8sp</dimen>
     <dimen name="dp_36">36dp</dimen>
     <dimen name="dp_64">64dp</dimen>
     <dimen name="dp_32">32dp</dimen>
