--- a/app/src/main/res/layout/fragment_commands.xml
+++ b/app/src/main/res/layout/fragment_commands.xml
@@ -3,12 +3,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.CommandsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Commands Fragment" />
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        android:layout_gravity="center"
+        android:orientation="vertical">
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:layout_width="match_parent"
+            android:layout_height="258dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/dp_16"
+            app:lottie_loop="true"
+            app:lottie_autoPlay="true"
+            app:lottie_rawRes="@raw/cat_sleeping"/>
+
+        <TextView
+            style="@style/myFontStyle.Headline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:lineSpacingExtra="@dimen/dp_4"
+            android:text="@string/not_available"
+            android:textAlignment="center"
+            android:textSize="@dimen/text_huge"
+            android:layout_gravity="center"/>
+
+    </LinearLayout>
 
 </FrameLayout>
